// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemStatuses renders a loader 1`] = `
<div
  className="col-md-7"
>
  <div
    className="stats-well"
  >
    <h4>
      Backend System Status
    </h4>
    <LoadingState
      additionalClasses=""
      loading={true}
      loadingText=""
      size="lg"
      timeout={300}
    >
      <table
        className="table table-striped"
      >
        <tbody>
          <tr>
            <th>
              Component
            </th>
            <th>
              Status
            </th>
            <th>
              Message
            </th>
          </tr>
        </tbody>
      </table>
    </LoadingState>
  </div>
</div>
`;

exports[`SystemStatuses renders a table 1`] = `
<div
  className="col-md-7"
>
  <div
    className="stats-well"
  >
    <h4>
      Backend System Status
    </h4>
    <LoadingState
      additionalClasses=""
      loading={false}
      loadingText=""
      size="lg"
      timeout={300}
    >
      <table
        className="table table-striped"
      >
        <tbody>
          <tr>
            <th>
              Component
            </th>
            <th>
              Status
            </th>
            <th>
              Message
            </th>
          </tr>
          <tr
            key="candlepin"
          >
            <td>
               
              candlepin
               
            </td>
            <td>
              OK
            </td>
            <td>
               
              a message
            </td>
          </tr>
          <tr
            key="candlepin_auth"
          >
            <td>
               
              candlepin_auth
               
            </td>
            <td>
              ERROR
            </td>
            <td>
               
              error message
            </td>
          </tr>
          <tr
            key="foreman_tasks"
          >
            <td>
               
              foreman_tasks
               
            </td>
            <td>
              OK
            </td>
            <td>
               
            </td>
          </tr>
          <tr
            key="pulp"
          >
            <td>
               
              pulp
               
            </td>
            <td>
              OK
            </td>
            <td>
               
            </td>
          </tr>
          <tr
            key="pulp_auth"
          >
            <td>
               
              pulp_auth
               
            </td>
            <td>
              OK
            </td>
            <td>
               
            </td>
          </tr>
        </tbody>
      </table>
    </LoadingState>
  </div>
</div>
`;
